# SemanticUMLDiff

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  SPEC.md  action.yml  base_modelo_tecnico.puml  entrypoint.sh  generate_demo.py  pyproject.toml  run  run.bat  run.py
.github/workflows/: ci.yml
docs/: analisis_logica_negocio.md  analisis_solid_responsabilidades.md  debug_notificaciones.puml  demo.puml  demo_complete.puml  detailed_uml_compiler_plan.md  high_level_uml_compiler_plan.md  plan_accion.md  plan_iterativo_migracion_lark_deepdiff.md  preguntas_revisor.md
fixtures/: complete_base.puml  complete_pr.puml  donaciones_pr_modelo_tecnico.puml  interface.puml  modified_class.puml  simple_class.puml  simple_relation.puml
information/: PlantUML_Styles_ Modern CSS-like Styling_for_Diagrams.htm  analysis_uml_diff.md  analysis_uml_diff_after_changes.md  diffs.txt  modelo_tecnico.puml
information/PlantUML_Styles_ Modern CSS-like Styling_for_Diagrams_files/: client  ezonetap.js  indy.js  leavenworth.js  socialproviders.js
specs/: 01-domain.md  02-architecture.md  03-workflow.md  complexity_estimator_plan.md
src/: main.py  pipeline.py
src/cli/: main.py
src/diff/: complexity.py  compute.py  deepdiff_engine.py  heuristics.py  serializer.py
src/domain/: diff_models.py  integration_models.py  models.py  render_models.py
src/graph/: reducer.py
src/integrations/: hosting.py  plantuml.py
src/parser/: lark_grammar.py  lark_parser.py  normalization.py  plantuml_parser.py  preprocessor.py
src/render/: member_renderer.py  puml_renderer.py  themes.py
test_data/: base.puml  target.puml
(+30 files in other folders)
