[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-uml-diff"
version = "0.1.0"
description = "Deterministic semantic UML diff system"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "requests>=2.31.0",
    "lark>=1.1.9",
    "deepdiff>=6.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests",
]

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true
